--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <li><a href="1.html">10억 프로젝트</a></li>
   <li><a href="2.html">결혼 프로젝트</a></li>
   <li><a href="3.html">건강 프로젝트</a></li>
-  <li><a href="채팅.html"></a></li>
+  <li><a href="채팅.html">채팅</a></li>
   </ol>
   <h2>인생, 너무 어렵게 살지 말자!</h2>
 
