--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head><title> 이서율 인생성공 프로젝트</title>
 <meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149830342-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149830342-1');
+</script>
+
 </head>
 <body>
   <h1><a href="index.html">이서율 인생성공 프로젝트</a></h1>
