--- a/2.html
+++ b/2.html
@@ -2,14 +2,48 @@
 <html>
 <head><title> 이서율 인생성공 프로젝트</title>
 <meta charset="utf-8">
+<style>
+a{
+  color:black;
+  text-decoration: none;
+}
+h1{
+  font-size:45px;
+  text-align: center;
+  border-bottom: 1px gray solid;
+  margin:0;
+  padding:20px;
+}
+ol{
+  border-right: 1px gray solid;
+  width:100px;
+  margin:0;
+  padding:20px;
+}
+body{
+  margin:0;
+}
+#grid{
+  display:grid;
+  grid-template-columns: 150px 1fr;
+}
+#grid ol{
+  padding-left: 33px;
+}
+#article{
+  padding-left: 25px;
+}
+</style>
 </head>
 <body>
   <h1><a href="index.html">이서율 인생성공 프로젝트</a></h1>
+  <div id="grid">
   <ol>
   <li><a href="1.html">10억 프로젝트</a></li>
   <li><a href="2.html">결혼 프로젝트</a></li>
   <li><a href="3.html">건강 프로젝트</a></li>
   </ol>
+  <div id="article">
   <h2>결혼 프로젝트</h2>
 
   서율이의 <strong>결혼</strong> 프로젝트<p>
@@ -24,6 +58,8 @@
     9.이서율 드디어 결혼하다<br>
     <img src="wedding.jpg" width="350">
   </p>
+  </div>
+</div>
   <div id="disqus_thread"></div>
 <script>
 
@@ -44,6 +80,6 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
+
 </body>
 </html>
